--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reacttodolist",
   "version": "0.1.0",
-  "homepage": "https://ReactToDo.github.io/react-gh-pages",
+  "homepage": "https://Sm1l.github.io/ReactToDo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
